--- a/index.html
+++ b/index.html
@@ -135,37 +135,22 @@
     <p>Service Area: Greater [Your City] Area</p>
   </section>
 
-  <section id="booking" class="section">
-    <h2>Book an Appointment</h2>
-    <form action="mailto:info@sahindetailing.com" method="post" enctype="text/plain">
-      <label for="name">Full Name:</label>
-      <input type="text" id="name" name="name" required>
-
-      <label for="email">Email Address:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="phone">Phone Number:</label>
-      <input type="tel" id="phone" name="phone" required>
-
-      <label for="service">Select Service:</label>
-      <select id="service" name="service" required>
-        <option value="Exterior Detail">Exterior Detail</option>
-        <option value="Interior Detail">Interior Detail</option>
-        <option value="Full Detail">Full Detail</option>
-        <option value="Engine Bay Cleaning">Engine Bay Cleaning</option>
-      </select>
-
-      <label for="date">Preferred Date:</label>
-      <input type="date" id="date" name="date" required>
-
-      <label for="message">Additional Notes:</label>
-      <textarea id="message" name="message" rows="4"></textarea>
-
-      <button type="submit">Submit Booking</button>
-    </form>
+  
+    <div style="text-align:center; margin-top: 1rem;">
+      <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Sahin+Detailing+Appointment&details=Schedule+your+car+detailing+appointment+with+Sahin+Detailing.&location=Your+Location+Here&dates=20250101T120000Z/20250101T130000Z" target="_blank" style="display:inline-block; margin-top:1rem; background-color:#4285F4; color:#fff; padding:0.75rem 1.5rem; border-radius:5px; text-decoration:none; font-weight:bold;">
+        Add to Google Calendar
+      </a>
+    </div>
   </section>
 
-  <footer>
+  <section id="booking" class="section">
+  <h2>Book an Appointment</h2>
+  <iframe src="https://forms.gle/iT9ay9kzxMW2dV2z6" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0" style="background:#fff; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">Loading…</iframe>
+</section>
+
+  
+
+<footer>
     <p>&copy; 2025 Sahin Detailing. All rights reserved.</p>
   </footer>
 </body>
