--- a/index.html
+++ b/index.html
@@ -50,31 +50,6 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       border-radius: 10px;
     }
-    form {
-      background: white;
-      padding: 2rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      border-radius: 10px;
-      max-width: 600px;
-      margin: 2rem auto;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 0.8rem;
-      margin-top: 0.5rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button {
-      background-color: #222;
-      color: white;
-      padding: 1rem 2rem;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
     footer {
       background: #222;
       color: white;
@@ -135,22 +110,12 @@
     <p>Service Area: Greater [Your City] Area</p>
   </section>
 
-  
-    <div style="text-align:center; margin-top: 1rem;">
-      <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Sahin+Detailing+Appointment&details=Schedule+your+car+detailing+appointment+with+Sahin+Detailing.&location=Your+Location+Here&dates=20250101T120000Z/20250101T130000Z" target="_blank" style="display:inline-block; margin-top:1rem; background-color:#4285F4; color:#fff; padding:0.75rem 1.5rem; border-radius:5px; text-decoration:none; font-weight:bold;">
-        Add to Google Calendar
-      </a>
-    </div>
+  <section id="booking" class="section">
+    <h2>Book an Appointment</h2>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTyxN07HFx_-f1Ac_ixkW4rsopfwpfVCTtDGRmFWt0IU16ng/viewform?embedded=true" width="640" height="1304" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </section>
 
-  <section id="booking" class="section">
-  <h2>Book an Appointment</h2>
-  <iframe src="https://forms.gle/iT9ay9kzxMW2dV2z6" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0" style="background:#fff; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">Loading…</iframe>
-</section>
-
-  
-
-<footer>
+  <footer>
     <p>&copy; 2025 Sahin Detailing. All rights reserved.</p>
   </footer>
 </body>
