--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sahin Detailing | Premium Car Detailing</title>
   <style>
+    #nav-tabs button {
+      background: #555;
+      border: none;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      cursor: pointer;
+      font-weight: bold;
+      border-radius: 5px;
+      transition: background 0.3s ease;
+    }
+    #nav-tabs button:hover {
+      background: #666;
+    }
+    #nav-tabs button.active {
+      background: #fff;
+      color: #222;
+    }
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background: #f4f4f4;
     }
-    header { color: black;$1
+    header {
+      background-color: #fff;
+      color: black;
+      text-align: center;
+      padding: 2rem;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
     nav {
       background: #444;
       display: flex;
@@ -18,35 +41,35 @@
       gap: 2rem;
       padding: 1rem;
     }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .hero {
-      background: url('car-detailing-hero.jpg') no-repeat center center/cover;
-      color: white;
-      text-align: center;
-      padding: 5rem 2rem;
-    }
     .section {
       padding: 3rem 2rem;
-      max-width: 1000px;
+      max-width: 1200px;
       margin: auto;
     }
     .services {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
+      margin-top: 2rem;
     }
     .service-box {
-      text-decoration: none;
-      color: inherit;
-      display: block;
       background: white;
       padding: 2rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       border-radius: 10px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+    }
+    .service-box:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+    }
+    .pricing-box {
+      background: white;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      margin-bottom: 1.5rem;
     }
     footer {
       background: #222;
@@ -62,115 +85,147 @@
     <p>Premium Mobile Car Detailing Service</p>
   </header>
 
-  <nav>
-    <a href="#services">Services</a>
-    <a href="#about">About Us</a>
-    <a href="#contact">Contact</a>
-    <a href="#booking">Book Now</a>
+  <nav id="nav-tabs">
+    <button onclick="showTab('home', this)">Home</button>
+    <button onclick="showTab('services', this)">Services</button>
+    <button onclick="showTab('pricing', this)">Pricing</button>
+    <button onclick="showTab('about', this)">About Us</button>
+    <button onclick="showTab('contact', this)">Contact</button>
+    <button onclick="showTab('booking', this)">Book Now</button>
   </nav>
 
-  <section class="hero">
-    <h2>Your Car, Our Passion</h2>
-    <p>From bumper to bumper, we make your car shine like new.</p>
-  </section>
+  <div id="tabs">
+    <section id="home" class="section">
+      <h2 style="text-align:center;">Welcome to Sahin Detailing</h2>
+      <div class="pricing-box" style="text-align:center;">
+        <p>Experience professional mobile car detailing like never before.</p>
+        <p>We come to you, delivering convenience and showroom-quality results.</p>
+        <p>Explore our services, book your appointment, and let your car shine!</p>
+      </div>
+    </section>
 
-  <section id="services" class="section">
-    <h2>Our Services</h2>
-    <div class="services">
-      <div class="service-box" onclick="openPopup('exterior')">
-        <h3>Exterior Detail</h3>
-        <p>Hand wash, wax, tire shine, and paint protection.</p>
-      </div>
-      <div class="service-box" onclick="openPopup('interior')">
-        <h3>Interior Detail</h3>
-        <p>Vacuum, shampoo, leather treatment, and odor removal.</p>
-      </div>
-      <div class="service-box" onclick="openPopup('full')">
-        <h3>Full Detail</h3>
-        <p>The complete package: inside and out perfection.</p>
-      </div>
-      <div class="service-box" onclick="openPopup('engine')">
-        <h3>Engine Bay Cleaning</h3>
-        <p>Degreasing and dressing for a showroom-worthy engine.</p>
-      </div>
-    </div>
-
-    <div id="popup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.6);">
-      <div id="popup-content" style="background:white; margin:10% auto; padding:2rem; width:90%; max-width:500px; border-radius:10px; position:relative;">
-        <span onclick="closePopup()" style="position:absolute; top:10px; right:15px; cursor:pointer; font-size:1.5rem;">&times;</span>
-        <div id="popup-text"></div>
-        <div style="text-align:center; margin-top:1.5rem;">
-          <a href="#booking" style="display:inline-block; background-color:#222; color:white; padding:0.75rem 1.5rem; text-decoration:none; border-radius:5px; font-weight:bold;">Book This Service</a>
+    <section id="services" class="section">
+      <h2 style="text-align:center;">Our Services</h2>
+      <div class="services">
+        <div class="service-box" onclick="openPopup('exterior')">
+          <h3>Exterior Detail</h3>
+          <p>Hand wash, wax, tire shine, and paint protection.</p>
+        </div>
+        <div class="service-box" onclick="openPopup('interior')">
+          <h3>Interior Detail</h3>
+          <p>Vacuum, shampoo, leather treatment, and odor removal.</p>
+        </div>
+        <div class="service-box" onclick="openPopup('full')">
+          <h3>Full Detail</h3>
+          <p>The complete package: inside and out perfection.</p>
+        </div>
+        <div class="service-box" onclick="openPopup('engine')">
+          <h3>Engine Bay Cleaning</h3>
+          <p>Degreasing and dressing for a showroom-worthy engine.</p>
         </div>
       </div>
-    </div>
 
-    <script>
-      function openPopup(service) {
-        const details = {
-          exterior: '$80 – Includes hand wash, wax, tire shine, and paint protection.',
-          interior: '$100 – Includes vacuum, deep shampoo, leather treatment, and odor removal.',
-          full: '$160 – Our best value: a full exterior and interior detail.',
-          engine: '$50 – Includes full degreasing and engine bay dressing.'
-        };
-        document.getElementById('popup-text').innerHTML = '<h3>' + service.charAt(0).toUpperCase() + service.slice(1) + ' Detail</h3><p>' + details[service] + '</p>';
-        document.getElementById('popup').style.display = 'block';
-      }
-      function closePopup() {
-        document.getElementById('popup').style.display = 'none';
-      }
-    </script>
-      <div class="service-box">
+      <div id="popup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.6);">
+        <div id="popup-content" style="background:white; margin:10% auto; padding:2rem; width:90%; max-width:500px; border-radius:10px; position:relative;">
+          <span onclick="closePopup()" style="position:absolute; top:10px; right:15px; cursor:pointer; font-size:1.5rem;">&times;</span>
+          <div id="popup-text"></div>
+          <div style="text-align:center; margin-top:1.5rem;">
+            <a href="#booking" style="display:inline-block; background-color:#222; color:white; padding:0.75rem 1.5rem; text-decoration:none; border-radius:5px; font-weight:bold;">Book This Service</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="pricing" class="section">
+      <h2 style="text-align:center;">Pricing Options</h2>
+      <div class="pricing-box" id="pricing-exterior">
+        <h3>Exterior Detail</h3>
+        <p>$80 – Includes hand wash, wax, tire shine, and paint protection.</p>
+      </div>
+      <div class="pricing-box" id="pricing-interior">
         <h3>Interior Detail</h3>
-        <p>Vacuum, shampoo, leather treatment, and odor removal.</p>
+        <p>$100 – Includes vacuum, deep shampoo, leather treatment, and odor removal.</p>
       </div>
-      <div class="service-box">
+      <div class="pricing-box" id="pricing-full">
         <h3>Full Detail</h3>
-        <p>The complete package: inside and out perfection.</p>
+        <p>$160 – Our best value: a full exterior and interior detail.</p>
       </div>
-      <div class="service-box">
+      <div class="pricing-box" id="pricing-engine">
         <h3>Engine Bay Cleaning</h3>
-        <p>Degreasing and dressing for a showroom-worthy engine.</p>
+        <p>$50 – Includes full degreasing and engine bay dressing.</p>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="pricing" class="section">
-    <h2>Pricing Options</h2>
-    <div id="pricing-exterior">
-      <h3>Exterior Detail</h3>
-      <p>$80 – Includes hand wash, wax, tire shine, and paint protection.</p>
-    </div>
-    <div id="pricing-interior">
-      <h3>Interior Detail</h3>
-      <p>$100 – Includes vacuum, deep shampoo, leather treatment, and odor removal.</p>
-    </div>
-    <div id="pricing-full">
-      <h3>Full Detail</h3>
-      <p>$160 – Our best value: a full exterior and interior detail.</p>
-    </div>
-    <div id="pricing-engine">
-      <h3>Engine Bay Cleaning</h3>
-      <p>$50 – Includes full degreasing and engine bay dressing.</p>
-    </div>
-  </section>
+    <section id="about" class="section">
+      <h2 style="text-align:center;">About Us</h2>
+      <div class="pricing-box">
+        <p>Sahin Detailing is a locally owned and operated mobile detailing company with a passion for perfection. We come to you—at home or at work—to make your vehicle look and feel brand new. With eco-friendly products and a dedication to customer satisfaction, we guarantee a detailing experience you’ll love.</p>
+      </div>
+    </section>
 
-  <section id="about" class="section">
-    <h2>About Us</h2>
-    <p>Sahin Detailing is a locally owned and operated mobile detailing company with a passion for perfection. We come to you—at home or at work—to make your vehicle look and feel brand new. With eco-friendly products and a dedication to customer satisfaction, we guarantee a detailing experience you’ll love.</p>
-  </section>
+    <section id="contact" class="section">
+      <h2 style="text-align:center;">Contact Us</h2>
+      <div class="pricing-box">
+        <p>Email: info@sahindetailing.com</p>
+        <p>Phone: (555) 123-4567</p>
+        <p>Service Area: Greater [Your City] Area</p>
+      </div>
+    </section>
 
-  <section id="contact" class="section">
-    <h2>Contact Us</h2>
-    <p>Email: theligitoof@gmail.com</p>
-    <p>Phone: (408)-648-6382</p>
-    <p>Service Area: Within San Jose, Monterey, Gilroy. </p>
-  </section>
+    <section id="booking" class="section">
+      <h2 style="text-align:center;">Book an Appointment</h2>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTyxN07HFx_-f1Ac_ixkW4rsopfwpfVCTtDGRmFWt0IU16ng/viewform?embedded=true" width="100%" height="1304" frameborder="0" marginheight="0" marginwidth="0" style="border-radius:10px; background:white; box-shadow:0 2px 8px rgba(0,0,0,0.1);">Loading…</iframe>
+    </section>
+  </div>
 
-  <section id="booking" class="section">
-    <h2>Book an Appointment</h2>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTyxN07HFx_-f1Ac_ixkW4rsopfwpfVCTtDGRmFWt0IU16ng/viewform?embedded=true" width="640" height="1304" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-  </section>
+  <script>
+    function openPopup(service) {
+      const details = {
+        exterior: '$80 – Includes hand wash, wax, tire shine, and paint protection.',
+        interior: '$100 – Includes vacuum, deep shampoo, leather treatment, and odor removal.',
+        full: '$160 – Our best value: a full exterior and interior detail.',
+        engine: '$50 – Includes full degreasing and engine bay dressing.'
+      };
+      document.getElementById('popup-text').innerHTML = '<h3>' + service.charAt(0).toUpperCase() + service.slice(1) + ' Detail</h3><p>' + details[service] + '</p>';
+      document.getElementById('popup').style.display = 'block';
+    }
+    function closePopup() {
+      document.getElementById('popup').style.display = 'none';
+    }
+
+    function showTab(tabId, btn) {
+      const sections = document.querySelectorAll('#tabs > section');
+      sections.forEach(sec => {
+        sec.style.opacity = 0;
+        setTimeout(() => {
+          sec.style.display = 'none';
+        }, 300);
+      });
+      const active = document.getElementById(tabId);
+      setTimeout(() => {
+        active.style.display = 'block';
+        setTimeout(() => {
+          active.style.opacity = 1;
+        }, 10);
+      }, 300);
+
+      const buttons = document.querySelectorAll('#nav-tabs button');
+      buttons.forEach(b => b.classList.remove('active'));
+      if (btn) btn.classList.add('active');
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      const sections = document.querySelectorAll('#tabs > section');
+      sections.forEach(sec => {
+        sec.style.transition = 'opacity 0.3s ease';
+        sec.style.opacity = 0;
+        sec.style.display = 'none';
+      });
+      const firstBtn = document.querySelector('#nav-tabs button');
+      firstBtn.classList.add('active');
+      showTab('home', firstBtn);
+    });
+  </script>
 
   <footer>
     <p>&copy; 2025 Sahin Detailing. All rights reserved.</p>
